--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	// Use MySQL Connector-J
+	compile 'mysql:mysql-connector-java'
 }
