--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=wild-race
 spring.datasource.password=wild-race
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
