add: Главная страница

--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,6 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	// Use MySQL Connector-J
 	compile 'mysql:mysql-connector-java'
+	// Thymeleaf Template
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 }
