--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.3.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
