--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dateformat": "^3.0.3",
     "vue": "^2.5.17",
+    "vue-i18n": "^8.4.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.11"
