--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^5.0.2",
     "dateformat": "^3.0.3",
+    "sockjs-client": "^1.3.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.4.0",
     "vue-resource": "^1.5.1",
