--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.password=wild-race
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
+server.port = 8080
+
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
