--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sockjs-client": "^1.3.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.4.0",
+    "vue-infinite-loading": "^2.4.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.11"
