--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@stomp/stompjs": "^5.0.2",
-    "dateformat": "^3.0.3",
+    "date-format": "^2.0.0",
     "sockjs-client": "^1.3.0",
     "vue": "^2.5.17",
     "vue-i18n": "^8.4.0",
