--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-infinite-loading": "^2.4.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.3.11"
+    "vuetify": "^1.3.11",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
