change: Replaced MySQL this PostgresQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/wild-race?useSSL=false
-spring.datasource.username=wild-race
-spring.datasource.password=wild-race
+spring.datasource.url=jdbc:postgresql://localhost/wildrace
+spring.datasource.username=wildrace
+spring.datasource.password=wildrace
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
+# So that there is no error at startup
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port = 8080
 
