--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,10 @@ dependencies {
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	// Use MySQL Connector-J
-	compile('mysql:mysql-connector-java')
+	// DB
+	compile('org.postgresql:postgresql')
+	// Migration DB
+	compile("org.flywaydb:flyway-core")
 	// Thymeleaf Template
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	// Web Socket
