--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.2.71'
+		kotlinVersion = '1.3.11'
 		springBootVersion = '2.1.0.RELEASE'
 	}
 	repositories {
@@ -36,6 +36,25 @@ compileTestKotlin {
 		jvmTarget = "1.8"
 	}
 }
+
+// Clean frontend files
+clean << {
+	println('>> path: ' + new File('.').absolutePath)
+	project.delete {
+		delete './src/main/resources/static'
+	}
+}
+
+// Build frontend before build backend
+task 'buildFrontend'
+buildFrontend << {
+	println('>> buildFrontend')
+	project.exec {
+		commandLine = "yarn build".split().toList()
+	}
+}
+processResources.dependsOn buildFrontend
+
 
 repositories {
 	mavenCentral()
