--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service build",
+    "start": "http-server ./src/main/resources/static/",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -27,6 +27,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "http-server": "^0.11.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -39,9 +40,18 @@
       "eslint:recommended"
     ],
     "rules": {
-      "semi": ["warn", "never"],
-      "quotes": ["warn", "double"],
-      "comma-dangle": ["warn", "never"]
+      "semi": [
+        "warn",
+        "never"
+      ],
+      "quotes": [
+        "warn",
+        "double"
+      ],
+      "comma-dangle": [
+        "warn",
+        "never"
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
