--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port = 8080
 
-logging.level.com.phpusr.wildrace=INFO
+logging.level.com.phpusr.wildrace=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.springframework.security=DEBUG
