add: Project version to application.properties during build

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,12 @@ clean << {
 task buildFrontend(type: Exec) {
 	commandLine 'yarn build'.split().toList()
 }
-processResources.dependsOn buildFrontend
+
+// Add project version to application.properties
+processResources {
+	dependsOn buildFrontend
+	filesMatching('**/*.properties') { expand(project.properties) }
+}
 
 final HerokuAppName = 'wildrace'
 
