--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+project.version=${version}
+
 spring.datasource.url=jdbc:postgresql://localhost/wildrace
 spring.datasource.username=wildrace
 spring.datasource.password=wildrace
