--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.phpusr'
-version = '2.0-SNAPSHOT'
+version = '2.0'
 sourceCompatibility = 1.8
 compileKotlin {
 	kotlinOptions {
