--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,11 @@ spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 # So that there is no error at startup
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-server.port = 8080
+server.port=8080
 
 logging.level.com.phpusr.wildrace=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.springframework.security=DEBUG
+
+google.analytics.id=change_it
