--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ processResources {
 }
 
 // Deploy to heroku
+// Require java plugin: heroku plugins:install java && heroku login
 final HerokuAppName = 'wildrace'
 task fastDeploy(type: Exec) {
 	dependsOn bootJar
